--- a/package.json
+++ b/package.json
@@ -10,8 +10,12 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^5.1.1",
+    "@radix-ui/react-dialog": "^1.1.14",
     "@radix-ui/react-label": "^2.1.7",
     "@radix-ui/react-slot": "^1.1.2",
+    "@tanstack/react-query": "^5.81.0",
+    "@tanstack/react-query-devtools": "^5.81.0",
+    "@tanstack/react-query-next-experimental": "^5.81.0",
     "@tanstack/react-virtual": "^3.13.10",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
